--- a/Maven-FootBall-Servlet-Class/src/main/webapp/welcome.html
+++ b/Maven-FootBall-Servlet-Class/src/main/webapp/welcome.html
@@ -19,7 +19,8 @@ This is the Home page for Duke’s Soccer League.
 </ul>
 <h3>League Administrator</h3>
 <ul>
-<li>Add a new league (TBA)</li>
+<li><a href="register.html">Add a new league (TBA)</a></li>
+
 </ul>
 </body>
 </html>
